--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=water-delivery-pdp
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/water-delivery-pdp_db
+spring.datasource.username=postgres
+spring.datasource.password=sriv2008
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+bot.token=7484560491:AAHe0EU6MPourAYa0INpKYVfDmWG7RmICSs
+
+spring.task.execution.pool.max-size=200
+spring.task.execution.pool.core-size=8
+spring.task.execution.pool.queue-capacity=100
